# DB-Trading-Bot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: brokers.h  price_handler.h  trading_bot.h
src/: main.cpp  price_handler.cpp  trading_bot.cpp
tests/: CMakeLists.txt  test_price.cpp
